--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
   "C_Cpp.default.intelliSenseMode": "gcc-x64",
   "C_Cpp.default.compilerPath": "C:\\mingw64\\bin\\g++.exe",
   "C_Cpp.default.cppStandard": "c++20",
-  "debug.onTaskErrors": "abort"
+  "debug.onTaskErrors": "abort",
+  "files.associations": {
+    "*.cjson": "jsonc",
+    "*.wxss": "css",
+    "*.wxs": "javascript",
+    "stdio.h": "c"
+  }
 }
