--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "stdio.h": "c",
     "atomic": "cpp",
     "cstdint": "cpp",
-    "stdint.h": "c"
+    "stdint.h": "c",
+    "string.h": "c"
   }
 }
