--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "vector": "c",
     "string_view": "c",
     "initializer_list": "c",
-    "ranges": "c"
+    "ranges": "c",
+    "stdlib.h": "c"
   }
 }
