--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
     "string_view": "c",
     "initializer_list": "c",
     "ranges": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "cmath": "c"
   }
 }
