--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "initializer_list": "c",
     "ranges": "c",
     "stdlib.h": "c",
-    "cmath": "c"
+    "cmath": "c",
+    "*.tcc": "c"
   }
 }
